# sc_payement

./: Cargo.toml
adder/: Cargo.toml
adder/interaction/: devnet.snippets.sh
adder/src/: adder.rs
